# secure_disk_manager_pro

./: README  README.md
Secure_DiskManager_Pro/: CMakeLists.txt
Secure_DiskManager_Pro/CLI/: CommandContext.h  CommandDispatcher.cpp  CommandDispatcher.h  GhostMode_CLI.cpp  Ghost_CLI_Main.cpp  Ghost_UI_CLI.cpp  Ghost_UI_CLI.h  Main.cpp  MainController.cpp  MainCoonrtroller.h
Secure_DiskManager_Pro/Core/: DiskManagement.h  FileCompressor.cpp  FileCompressor.h  FileCompressor_MT_SIMD.cpp  FileCompressor_MT_SIMD.h  FileCompressor_MT_SIMD_Enc.cpp  FileCompressor_MT_SIMD_Enc.h  FileTransferManager.cpp  FileTransferManager.h  FileUploader.cpp  FileUploader.h  GhostMode_Controller-2.cpp  GhostMode_Controller-2.h  GhostMode_Controller.cpp  GhostMode_Controller.h  Payload_Dispatcher.cpp  Payload_Dispatcher.h  SearcEngine.cpp  SearchEngine.h  SecureDeletion.cpp  SecureDeletion_SIMD.cpp  StealthMailer.cpp  StealthMailer.h  UltraFastSearch.cpp  UltraFastSearch.h
Secure_DiskManager_Pro/GhostMode_Vanisher/include/: GhostMode_FS_Monitor.h  Ghost_AutoWipe.h  Ghost_NetUtils.h
Secure_DiskManager_Pro/GhostMode_Vanisher/net/: GhostStealthNet.cpp  GhostStealthNet.h  Ghost_Tunnel.cpp  Ghost_Tunnel.h
Secure_DiskManager_Pro/GhostMode_Vanisher/plugins/: PrimeHilbertIndexer.cpp  PrimeHilbertIndexer.h  QuantumEngine.cpp  QuantumEngine.h  QubitTypes.cpp  QubitTypes.h  SIMD_Entropy.cpp  SIMD_Entropy.h  urls.txt
Secure_DiskManager_Pro/GhostMode_Vanisher/resources/: seettings.conf
Secure_DiskManager_Pro/GhostMode_Vanisher/src/: GhostMode_FS_Monitor.cpp  Ghost_AutoWipe.cpp  Ghost_NetUtils.cpp
Secure_DiskManager_Pro/identity/: Ghost_IdenityManager.h  Ghost_IdentitySwitcher.cpp  IdentitySwitcher.cpp  IdentitySwitcher.h  Persona_Switcher.cpp  Persona_Switcher.h
Secure_DiskManager_Pro/old_code/: CMakeLists.txt  Main.new  RNG.h  main.cpp
Secure_DiskManager_Pro/utils/: DPAPIDecryptor.cpp  DPAPIDecryptor.h  DPAPIEncryptor.cpp  DPAPIEncryptor.h  GPGWrapper.cpp  GPGWrapper.h  GeneralFunctions.cpp  GhostScriptVault.h  GhostVPNManager.cpp  GhostVPNManager.h  Ghost_Daemon.cpp  Ghost_Daemon.h  Ghost_KillSwitc.cpp  Ghost_KillSwitch.h  Ghost_Watchdog.cpp  Ghost_Watchdog.h  KeyManager.cpp  MacSpoofer.cpp  MacSpoofer.h  New Text Document.txt  ProfileRotator.cpp  ProfileRotator.h  RNG.cpp  RNG_SIMD.cpp  RNG_SIMD.h  Resource.h  ServiceManager.cpp  SystemMonitor.cpp  SystemMonitor.h
docs/: 2nd_lap.md  README.md  final_plan.md  post_ghostmode-vanisher_ul.md  ver1_g-petey_plan.md  ver2_g-petey_plan.md
file_manage_a_trois/: main.cpp
file_manage_a_trois/include/: FileEncryption.h  Resource.h  Status.cpp
file_manage_a_trois/src/: DiskManagement.cpp  FileEncryption.cpp  FileUploader.cpp  KeyManager.h  RNG.h  RNG_SIMD.cpp  RNG_SIMD.h  SecureDeletion.h  SecureDeletion_SIMD.cpp  SecureDeletion_SIMD.h  SelfCleanup.cpp  SelfCleanup.h  ServiceManager.h
file_manage_a_trois/utils/: Megapanzer_Definitions.h
for_use/aes_tables/: aes_tables.cpp
for_use/markov/: custom_pos_library.txt  mutarkov_brain.json  mutarkov_persistent.cpp  (+1 more)
inspire/: Crypto.cpp  Crypto.h  Megapanzer_DefInitions.h  Status.h  UploadFile_Direct.cpp  panzer_selfdelete.cpp  rc4.cpp  rc4encryption.cpp
sources/: c++_compile_optim.md  c-primes-fast.cpp
sources/proc_wolf_cpp/proc_wolf_cpp/src/: CMakeLists.txt  ProcwolfEngine.cpp  ProcwolfEngine.h  build_all.bat
sources/proc_wolf_cpp/proc_wolf_cpp/src/CLI/: CLI.cpp
sources/proc_wolf_cpp/proc_wolf_cpp/src/installer/: procwolf_installer.nsi
sources/proc_wolf_cpp/proc_wolf_cpp/src/resources/: ProcwolfResources.rc
sources/proc_wolf_cpp/proc_wolf_cpp/src/service/: service.cpp  service.h
sources/proc_wolf_cpp/proc_wolf_cpp/src/stealth/: PrcwolfTray.h
sources/proc_wolf_cpp/proc_wolf_cpp/src/tools/: WhitelistManger.cpp  whitelist
(+128 files in other folders)
